// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout loading 1`] = `
<div>
  <div
    class="container mx-auto px-4"
  >
    <div
      class="flex mb-4"
    >
      <div
        class="w-full"
      >
        <h2
          class="text-center"
        >
          ...
        </h2>
      </div>
    </div>
    <div
      class="flex mb-4"
    >
      <div
        class="w-full"
      >
        <h1
          class="font-bold logo my-4 text-5xl text-center"
        >
          Tweries
        </h1>
      </div>
    </div>
  </div>
</div>
`;

exports[`Layout to match snapshot 1`] = `
<div>
  <div
    class="container mx-auto px-4"
  >
    <div
      class="flex mb-4"
    >
      <div
        class="w-full"
      >
        <header
          class="flex flex-row justify-between"
        >
          <span
            class="my-4"
          />
        </header>
      </div>
    </div>
    <div
      class="flex mb-4"
    >
      <div
        class="w-full"
      >
        <h1
          class="font-bold logo my-4 text-5xl text-center"
        >
          Tweries
        </h1>
      </div>
    </div>
  </div>
</div>
`;
